--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,8 @@ cython_debug/
 # Except sample data, models:
 !spare_scores/data/*.csv
 !spare_scores/mdl/*.pkl.gz
+!tests/fixtures/*.csv
+!tests/fixtures/*.pkl.gz
 
 # Temporary files and folders
 temp/
