--- a/.gitignore
+++ b/.gitignore
@@ -81,8 +81,8 @@ docs/_build/
 target/
 
 # Jupyter Notebook
-.ipynb_checkpoints
-.ipynb 
+*.ipynb_checkpoints
+*.ipynb 
 
 # IPython
 profile_default/
@@ -182,6 +182,6 @@ cython_debug/
 temp/
 
 # images
-.png 
-.jpeg
-.jpg 
+*.png 
+*.jpeg
+*.jpg 
