--- a/.github/workflows/test_cases.yml
+++ b/.github/workflows/test_cases.yml
@@ -19,4 +19,4 @@ jobs:
         
         - name: Run unit tests
           run: |
-            python -m unittest discover -s tests -p "tests/unit/*.py"
+            cd tests/unit && python -m unittest discover -s . -p "*.py"
