--- a/.github/workflows/test_cases.yml
+++ b/.github/workflows/test_cases.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
     build:
-        runs-on: ubuntu-latest
+        runs-on: macos-latest
 
         steps:
         - name: Checkout repository
@@ -15,6 +15,7 @@ jobs:
         - name: Install dependencies 
           run: |
             python -m pip install --upgrade pip
+            pip3 install pytest
             pip install .
         
         - name: Run unit tests
