--- a/.github/workflows/test_cases.yml
+++ b/.github/workflows/test_cases.yml
@@ -15,7 +15,7 @@ jobs:
         - name: Install dependencies 
           run: |
             python -m pip install --upgrade pip
-            pip3 install pytest
+            pip3 install pytest --break-system-packages
             pip install .
         
         - name: Run unit tests
