--- a/.github/workflows/macos_test_cases.yml
+++ b/.github/workflows/macos_test_cases.yml
@@ -14,8 +14,10 @@ jobs:
             pthon-version: '3.8'
         - name: Install dependencies
           run: |
-            python -m pip install --upgrade pip
-            pip install .
+            conda create -n spare python=3.8
+            conda activate spare
+            conda install pip
+            pip install spare_scores
         
         - name: Run unit tests
           run: |
