--- a/.github/workflows/macos_test_cases.yml
+++ b/.github/workflows/macos_test_cases.yml
@@ -16,6 +16,7 @@ jobs:
           run: |
             brew install --cask miniconda
             conda create -n spare python=3.8
+            conda init zsh
             conda activate spare
             conda install pip
             pip install spare_scores
