--- a/.github/workflows/macos_test_cases.yml
+++ b/.github/workflows/macos_test_cases.yml
@@ -5,23 +5,26 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
     build:
-        runs-on: macos-latest
+        runs-on: "macos-latest"
 
         steps:
         - name: Checkout repository
-          uses: actions/checkout@v2
+          uses: actions/checkout@v3
           with:
             pthon-version: '3.8'
-        - name: Install dependencies
-          run: |
-            brew install --cask miniconda
-            brew install --cask anaconda
-            conda create -n spare python=3.8
-            conda init zsh
-            conda activate spare
-            conda install pip
-            pip install spare_scores
-        
+        - name: Set-up miniconda for macos
+          uses: conda-incubator/setup-miniconda@v2
+          with:
+              auto-update-conda: true
+              python-version: 3.8
+        - name: Create conda env
+          run: conda create -n spare python=3.8
+        - name: Activate conda env
+          run: echo "conda activate spare" >> $GITHUB_ENV
+        - name: Install pip
+          run: conda run -n spare conda install pip
+        - name: Install spare scores
+          run: conda run -n spare pip install spare_sores
         - name: Run unit tests
           run: |
             cd tests/unit && python -m unittest discover -s . -p "*.py"
