--- a/.github/workflows/macos_test_cases.yml
+++ b/.github/workflows/macos_test_cases.yml
@@ -24,6 +24,8 @@ jobs:
           run: conda run -n spare conda install pip
         - name: Install spare scores
           run: conda run -n spare pip install spare_scores
+        - name: Download dependencies
+          run: pip install .
         - name: Run unit tests
           run: |
             cd tests/unit && python -m unittest discover -s . -p "*.py"
