--- a/.github/workflows/macos_test_cases.yml
+++ b/.github/workflows/macos_test_cases.yml
@@ -5,14 +5,14 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
     build:
-        runs-on: "macos-latest"
+        runs-on: ["ubuntu-latest", "macos-latest"]
 
         steps:
         - name: Checkout repository
           uses: actions/checkout@v3
           with:
             pthon-version: '3.8'
-        - name: Set-up miniconda for macos
+        - name: Set-up miniconda for macos and ubuntu
           uses: conda-incubator/setup-miniconda@v2
           with:
               auto-update-conda: true
