--- a/.github/workflows/macos_test_cases.yml
+++ b/.github/workflows/macos_test_cases.yml
@@ -5,7 +5,7 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
     build:
-        runs-on: ["ubuntu-latest", "macos-latest"]
+        runs-on: ["macos-latest"]
 
         steps:
         - name: Checkout repository
