--- a/.github/workflows/macos_test_cases.yml
+++ b/.github/workflows/macos_test_cases.yml
@@ -5,18 +5,27 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
     build:
-        runs-on: macos-latest
+        runs-on: ["macos-latest"]
 
         steps:
         - name: Checkout repository
-          uses: actions/checkout@v2
+          uses: actions/checkout@v3
           with:
             pthon-version: '3.8'
-        - name: Install dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install .
-        
+        - name: Set-up miniconda for macos and ubuntu
+          uses: conda-incubator/setup-miniconda@v2
+          with:
+              auto-update-conda: true
+              python-version: 3.8
+              miniconda-version: "latest"
+        - name: Create conda env
+          run: conda create -n spare python=3.8
+        - name: Install pip
+          run: conda run -n spare conda install pip
+        - name: Install spare scores
+          run: conda run -n spare pip install spare_scores
+        - name: Download dependencies
+          run: pip install setuptools && pip install . 
         - name: Run unit tests
           run: |
             cd tests/unit && python -m unittest discover -s . -p "*.py"
