--- a/.github/workflows/macos_test_cases.yml
+++ b/.github/workflows/macos_test_cases.yml
@@ -11,7 +11,7 @@ jobs:
         - name: Checkout repository
           uses: actions/checkout@v3
           with:
-            pthon-version: '3.8'
+            python-version: '3.8.10'
         - name: Set-up miniconda for macos and ubuntu
           uses: conda-incubator/setup-miniconda@v2
           with:
