--- a/.github/workflows/ubuntu_test_cases.yml
+++ b/.github/workflows/ubuntu_test_cases.yml
@@ -9,9 +9,9 @@ jobs:
 
         steps:
         - name: Checkout repository
-          uses: actions/checkout@v3
+          uses: actions/checkout@v4
           with:
-            pthon-version: '3.8'
+            python-version: '3.8.10'
         - name: Set-up miniconda for macos and ubuntu
           uses: conda-incubator/setup-miniconda@v2
           with:
