--- a/.github/workflows/macos_test_cases.yml
+++ b/.github/workflows/macos_test_cases.yml
@@ -8,8 +8,8 @@ jobs:
         runs-on: ["macos-latest"]
 
         steps:
-        - name: Checkout repository
-          uses: actions/checkout@v3
+        - uses: actions/checkout@v4
+        - uses: actions/setup-python@v5
           with:
             python-version: '3.8'
         - name: Set-up miniconda for macos and ubuntu
