Bug fix with wrong version of python at both gh workflows

--- a/.github/workflows/macos_test_cases.yml
+++ b/.github/workflows/macos_test_cases.yml
@@ -8,10 +8,10 @@ jobs:
         runs-on: ["macos-latest"]
 
         steps:
-        - name: Checkout repository
-          uses: actions/checkout@v3
+        - uses: actions/checkout@v4
+        - uses: actions/setup-python@v5
           with:
-            pthon-version: '3.8'
+            python-version: '3.8'
         - name: Set-up miniconda for macos and ubuntu
           uses: conda-incubator/setup-miniconda@v2
           with:
@@ -29,3 +29,5 @@ jobs:
         - name: Run unit tests
           run: |
             cd tests/unit && python -m unittest discover -s . -p "*.py"
+
+
