--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -e .
-          pip install sphinx sphinx_rtd_theme sphinx-tabs
+          pip install sphinx sphinx_rtd_theme sphinx-tabs sphinx_toolbox
       - name: Sphinx build
         run: |
           cd docs/
