--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -11,15 +11,17 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+      - name: Activate conda
+        run: |
+          conda create -n spare python=3.8
+          conda run -n spare conda install pip
+          conda run -n spare pip install spare_scores
       - name: Install dependencies
         run: |
           pip install -e .
           pip install sphinx sphinx_rtd_theme sphinx-tabs sphinx_toolbox
       - name: Sphinx build
         run: |
-          cd docs/
-          make clean html
-          cd ..
           sphinx-apidoc -o docs spare_scores/
           cd docs/
           make html
