Minor updates to mlp and mlp_torch models

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ per-file-ignores =
     __init__.py: F401, F403
 
 [mypy]
+exclude= tests
 # Import discovery
 namespace_packages = False
 ignore_missing_imports = True
