--- a/.github/workflows/ubuntu_test_cases.yml
+++ b/.github/workflows/ubuntu_test_cases.yml
@@ -29,4 +29,11 @@ jobs:
         - name: Run unit tests
           run: |
             cd tests/unit && python -m unittest discover -s . -p "*.py"
+        - name: Generate Coverage Report
+          run: |
+            pip install coverage
+            cd tests/unit/
+            coverage run -m unittest
+        - name: Upload Coverage to Codecov
+          uses: codecov/codecov-action@v2
 
