--- a/.github/workflows/ubuntu_test_cases.yml
+++ b/.github/workflows/ubuntu_test_cases.yml
@@ -36,4 +36,8 @@ jobs:
             coverage run -m unittest
         - name: Upload Coverage to Codecov
           uses: codecov/codecov-action@v2
+          with:
+            token: ${{ secrets.CODECOV_TOKEN }}
+            slug: CBICA/spare_score
+          
 
