--- a/.github/workflows/ubuntu_test_cases.yml
+++ b/.github/workflows/ubuntu_test_cases.yml
@@ -32,7 +32,7 @@ jobs:
         - name: Generate Coverage Report
           run: |
             pip install pytest-cov
-            cd tests/unit && pytest --cov
+            cd tests/unit && pytest --cov=./ --cov-report=xml
         - name: Upload Coverage to Codecov
           uses: codecov/codecov-action@v2
           with:
