--- a/.github/workflows/macos_test_cases.yml
+++ b/.github/workflows/macos_test_cases.yml
@@ -29,12 +29,12 @@ jobs:
         - name: Run unit tests
           run: |
             cd tests/unit && python -m unittest discover -s . -p "*.py"
-        - name: Generate Report
+        - name: Generate Coverage Report
           run: |
             pip install pytest-cov
-            cd tests/unit && pytest --cov
+            cd tests/unit && pytest --cov=../../ --cov-report=xml
         - name: Upload Coverage to Codecov
-          uses: codecov/codecov-action@v2
+          uses: codecov/codecov-action@v4.0.1
           with:
             token: ${{ secrets.CODECOV_TOKEN }}
             slug: CBICA/spare_score
