--- a/.github/workflows/ubuntu_test_cases.yml
+++ b/.github/workflows/ubuntu_test_cases.yml
@@ -32,9 +32,9 @@ jobs:
         - name: Generate Coverage Report
           run: |
             pip install pytest-cov
-            cd tests/unit && pytest --cov
+            cd tests/unit && pytest --cov=../../ --cov-report=xml
         - name: Upload Coverage to Codecov
-          uses: codecov/codecov-action@v2
+          uses: codecov/codecov-action@v4.0.1
           with:
             token: ${{ secrets.CODECOV_TOKEN }}
             slug: CBICA/spare_score
