--- a/.github/workflows/ubuntu_test_cases.yml
+++ b/.github/workflows/ubuntu_test_cases.yml
@@ -24,6 +24,7 @@ jobs:
           run: conda run -n spare conda install pip
         - name: Install spare scores
           run: |
+           pip install setuptools twine wheel
            python setup.py bdist_wheel
            cd dist 
            WHEEL_FILE=$(ls spare_scores*)
