--- a/.github/workflows/macos_test_cases.yml
+++ b/.github/workflows/macos_test_cases.yml
@@ -36,8 +36,9 @@ jobs:
           cd tests/unit && python -m unittest discover -s . -p "*.py"
       - name: Generate Coverage Report
         run: |
-          pip install pytest pytest-cov
-          cd tests/unit && pytest --cov=../../ --cov-report=xml
+          pip install pytest
+          pip install pytest-cov
+          cd tests/unit && python3 -m pytest --cov=../../ --cov-report=xml
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
