--- a/.github/workflows/macos_test_cases.yml
+++ b/.github/workflows/macos_test_cases.yml
@@ -33,4 +33,4 @@ jobs:
         run: pip install setuptools && pip install .
       - name: Run unit tests
         run: |
-          python3 -m pytest --cov=../../
+          python3 -m pytest .
