--- a/.github/workflows/macos_test_cases.yml
+++ b/.github/workflows/macos_test_cases.yml
@@ -29,8 +29,10 @@ jobs:
           cd dist
           WHEEL_FILE=$(ls spare_scores*)
           pip install "$WHEEL_FILE"
+          cd ..
       - name: Download dependencies
         run: pip install setuptools && pip install .
       - name: Run unit tests
         run: |
-          pytest --cov=../../
+          cd tests/unit
+          pytest .
