--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -2,7 +2,7 @@ name: Deploy static cntent to Pages
 on:
   push:
     branches: ["main"]
-  
+
 jobs:
   build-docs:
     runs-on: ubuntu-latest
@@ -10,10 +10,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: "3.12"
       - name: Activate conda
         run: |
-          conda create -n spare python=3.8
+          conda create -n spare python=3.12
           conda run -n spare conda install pip
           conda run -n spare pip install spare_scores
       - name: Install dependencies
@@ -29,30 +29,29 @@ jobs:
 
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v3
-        
+
         with:
           path: docs/_build/html
           retention-days: 90
-  
+
   deploy-docs:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     needs: build-docs
-    
+
     permissions:
       pages: write
       id-token: write
-    
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.output.page_url }}
-      
-    concurrency: 
+
+    concurrency:
       group: "pages"
       cancel-in-progress: true
-    
+
     runs-on: ubuntu-latest
     steps:
-     - name: Deploy artifact to GitHub Pages
-       id: deployment
-       uses: actions/deploy-pages@v4
-         
+      - name: Deploy artifact to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
