Updated macos workflow versions to macos-13

--- a/.github/workflows/macos_test_cases_p3-8.yml
+++ b/.github/workflows/macos_test_cases_p3-8.yml
@@ -1,11 +1,11 @@
-name: spare_scores test cases on ubuntu for python 3.8
+name: spare_scores test cases on macos for python 3.8
 
 # workflow dispatch has been added for testing purposes
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    runs-on: ["macos-latest"]
+    runs-on: ["macos-13"]
 
     steps:
       - uses: actions/checkout@v4
