--- a/.github/workflows/macos_test_cases_p3-8.yml
+++ b/.github/workflows/macos_test_cases_p3-8.yml
@@ -31,6 +31,12 @@ jobs:
           pip install "$WHEEL_FILE"
       - name: Download dependencies
         run: pip install setuptools && pip install .
-      - name: Run unit tests
+      - name: Generate Coverage Report
         run: |
-          cd tests/unit && python -m unittest discover -s . -p "*.py"
+          pip install pytest-cov
+          cd tests/unit && pytest --cov=../../ --cov-report=xml
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: CBICA/spare_score
