Try with pytest

--- a/.github/workflows/ubuntu_test_cases_p3-12.yml
+++ b/.github/workflows/ubuntu_test_cases_p3-12.yml
@@ -1,4 +1,4 @@
-name: spare_scores test cases on ubuntu for python 3.12
+name: Ubuntu python=3.12
 
 # workflow dispatch has been added for testing purposes
 on: [push, pull_request, workflow_dispatch]
