--- a/.github/workflows/macos_test_cases_p3-12.yml
+++ b/.github/workflows/macos_test_cases_p3-12.yml
@@ -1,4 +1,4 @@
-name: spare_scores test cases on macos for python 3.12
+name: MacOS python=3.12
 
 # workflow dispatch has been added for testing purposes
 on: [push, pull_request, workflow_dispatch]
@@ -18,4 +18,4 @@ jobs:
           python -m pip install .
       - name: Run unit tests
         run: |
-          cd tests/unit && python -m unittest discover -s . -p "*.py"
+          cd tests/unit && pytest --cov=../../
