--- a/.github/workflows/macos_test_cases_p3-12.yml
+++ b/.github/workflows/macos_test_cases_p3-12.yml
@@ -14,7 +14,7 @@ jobs:
           python-version: "3.12.4"
       - name: Install spare scores
         run: |
-          pip install setuptools twine wheel
+          pip install setuptools twine wheel pytest pytest-cov
           python -m pip install .
       - name: Run unit tests
         run: |
