--- a/.github/workflows/macos-tests.yml
+++ b/.github/workflows/macos-tests.yml
@@ -9,30 +9,17 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-    name: Python ${{ matrix.python-version }} tests
+    name: Python ${{ matrix.python-version }} sample
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Set-up miniconda for macos and ubuntu
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-update-conda: true
-          python-version: ${{ matrix.python-version }}
-          miniconda-version: "latest"
-      - name: Create conda env
-        run: conda create -n spare python= ${{ matrix.python-version }}
-      - name: Install pip
-        run: conda run -n spare conda install pip
       - name: Install spare scores
         run: |
-          pip install setuptools twine wheel
-          python setup.py bdist_wheel
-          cd dist
-          WHEEL_FILE=$(ls spare_scores*)
-          pip install "$WHEEL_FILE"
-          pip install setuptools && pip install .
+          pip install -r dev-dependencies.txt
+          pip install setuptools twine wheel pytest pytest-cov
+          python -m pip install .
       - name: Run unit tests
         run: |
           cd tests/unit && pytest --cov=../../
