--- a/.github/workflows/macos-tests-3.11.yml
+++ b/.github/workflows/macos-tests-3.11.yml
@@ -1,25 +1,25 @@
-name: Ubuntu python=3.8
+name: macos python=3.11
 
 # workflow dispatch has been added for testing purposes
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    runs-on: ["ubuntu-latest"]
+    runs-on: ["macos-13"]
 
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.8"
+          python-version: "3.11"
       - name: Set-up miniconda for macos and ubuntu
         uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
-          python-version: 3.8
+          python-version: 3.11
           miniconda-version: "latest"
       - name: Create conda env
-        run: conda create -n spare python=3.8
+        run: conda create -n spare python=3.11
       - name: Install pip
         run: conda run -n spare conda install pip
       - name: Install spare scores
@@ -31,6 +31,12 @@ jobs:
           pip install "$WHEEL_FILE"
       - name: Download dependencies
         run: pip install setuptools && pip install .
-      - name: Run unit tests
+      - name: Generate Coverage Report
         run: |
-          cd tests/unit && python -m unittest discover -s . -p "*.py"
+          pip install pytest-cov
+          cd tests/unit && pytest --cov=../../ --cov-report=xml
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: CBICA/spare_score
