--- a/.github/workflows/macos-tests-3.8.yml
+++ b/.github/workflows/macos-tests-3.8.yml
@@ -1,4 +1,4 @@
-name: MacOS python=3.8
+name: macos python=3.8
 
 # workflow dispatch has been added for testing purposes
 on: [push, pull_request, workflow_dispatch]
