--- a/.github/workflows/ubuntu-tests-3.9.yml
+++ b/.github/workflows/ubuntu-tests-3.9.yml
@@ -1,4 +1,4 @@
-name: ubuntu python=3.12
+name: ubuntu python=3.9
 
 # workflow dispatch has been added for testing purposes
 on: [push, pull_request, workflow_dispatch]
@@ -11,21 +11,24 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: "3.9"
       - name: Set-up miniconda for macos and ubuntu
         uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
-          python-version: 3.12
+          python-version: 3.9
           miniconda-version: "latest"
       - name: Create conda env
-        run: conda create -n spare python=3.12
+        run: conda create -n spare python=3.9
       - name: Install pip
         run: conda run -n spare conda install pip
       - name: Install spare scores
         run: |
           pip install setuptools twine wheel
-          python -m pip install .
+          python setup.py bdist_wheel
+          cd dist
+          WHEEL_FILE=$(ls spare_scores*)
+          pip install "$WHEEL_FILE"
       - name: Download dependencies
         run: pip install setuptools && pip install .
       - name: Run unit tests
