--- a/.github/workflows/ubuntu-tests-3.10.yml
+++ b/.github/workflows/ubuntu-tests-3.10.yml
@@ -24,6 +24,7 @@ jobs:
         run: conda run -n spare conda install pip
       - name: Install spare scores
         run: |
+          python -m pip cache purge
           pip install setuptools twine wheel
           python setup.py bdist_wheel
           cd dist
