--- a/.github/workflows/ubuntu-tests-3.11.yml
+++ b/.github/workflows/ubuntu-tests-3.11.yml
@@ -12,16 +12,6 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Set-up miniconda for macos and ubuntu
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-update-conda: true
-          python-version: 3.11
-          miniconda-version: "latest"
-      - name: Create conda env
-        run: conda create -n spare python=3.11
-      - name: Install pip
-        run: conda run -n spare conda install pip
       - name: Install spare scores
         run: |
           python -m pip cache purge
@@ -34,4 +24,4 @@ jobs:
         run: pip install setuptools && pip install .
       - name: Run unit tests
         run: |
-          cd tests/unit && python -m unittest discover -s . -p "*.py"
+          cd tests/unit && pytest --cov=../../
