--- a/.github/workflows/ubuntu-tests-3.8.yml
+++ b/.github/workflows/ubuntu-tests-3.8.yml
@@ -21,7 +21,7 @@ jobs:
           WHEEL_FILE=$(ls spare_scores*)
           pip install "$WHEEL_FILE"
       - name: Download dependencies
-        run: pip install setuptools && pip install -r dev-dependencies.txt
+        run: pip install setuptools && pip install .
       - name: Run unit tests
         run: |
           cd tests/unit && pytest --cov=../../
