--- a/.github/workflows/ubuntu-tests-3.10.yml
+++ b/.github/workflows/ubuntu-tests-3.10.yml
@@ -24,4 +24,4 @@ jobs:
         run: pip install setuptools && pip install -r dev-dependencies.txt
       - name: Run unit tests
         run: |
-          cd tests/unit && pytest --cov=../../
+          cd tests/unit && python -m unittest discover -s . -p "*.py"
