Fix actions titles

--- a/.github/workflows/macos-tests-3.12.yml
+++ b/.github/workflows/macos-tests-3.12.yml
@@ -1,4 +1,4 @@
-name: macos python=3.12
+name: macos build
 
 # workflow dispatch has been added for testing purposes
 on: [push, pull_request, workflow_dispatch]
