--- a/.github/workflows/macos-tests-3.8.yml
+++ b/.github/workflows/macos-tests-3.8.yml
@@ -1,4 +1,4 @@
-name: macos build python=3.12
+name: macos build python=3.8
 
 # workflow dispatch has been added for testing purposes
 on: [push, pull_request, workflow_dispatch]
@@ -24,7 +24,7 @@ jobs:
         run: pip install setuptools && pip install .
       - name: Generate Coverage Report
         run: |
-          pip install pytest-cov
+          pip install pytest pytest-cov
           cd tests/unit && pytest --cov=../../ --cov-report=xml
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v4.0.1
