Add python -m on pytest

--- a/.github/workflows/macos-tests-3.8.yml
+++ b/.github/workflows/macos-tests-3.8.yml
@@ -21,7 +21,7 @@ jobs:
           WHEEL_FILE=$(ls spare_scores*)
           pip install "$WHEEL_FILE"
       - name: Download dependencies
-        run: pip install setuptools && pip install .
+        run: pip install setuptools && pip install -r dev-dependencies.txt
       - name: Generate Coverage Report
         run: |
           pip install pytest pytest-cov
