--- a/.github/workflows/macos-tests-3.12.yml
+++ b/.github/workflows/macos-tests-3.12.yml
@@ -19,4 +19,5 @@ jobs:
           python -m pip install .
       - name: Run unit tests
         run: |
-          cd tests/unit && python -m pytest --cov=../../
+          pip install pytest pytest-cov
+          cd tests/unit && pytest --cov=../../
