--- a/.github/workflows/macos-tests-3.8.yml
+++ b/.github/workflows/macos-tests-3.8.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Install spare scores
         run: |
           python -m pip cache purge
+          pip install -r requirements.txt
           pip install setuptools twine wheel
           python setup.py bdist_wheel
           cd dist
