--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==23.1.0
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
+# contourpy==1.2.1
 cycler==0.11.0
 exceptiongroup==1.1.1
 filelock==3.12.2
@@ -15,29 +16,29 @@ iniconfig==2.0.0
 joblib==1.3.1
 jsonschema==4.17.3
 kiwisolver==1.4.4
-matplotlib==3.7.5
+matplotlib==3.9.0
 msgpack==1.0.5
-numpy==1.24.4
+numpy==1.22.0
 packaging==23.1
-pandas==2.2.2
+pandas==2.2.0
 Pillow==9.5.0
 pkgutil_resolve_name==1.3.10
 pluggy==1.5.0
+protobuf==4.23.3
 pyparsing==3.1.0
 pyrsistent==0.19.3
 pytest==8.2.2
-pytest-cov==5.0.0
 python-dateutil==2.8.2
 pytz==2023.3
 PyYAML==6.0.2
 ray==2.34.0
 requests==2.31.0
-scikit-learn==1.5.0
+scikit-learn==1.0.1
 scipy==1.14.0
 six==1.16.0
 threadpoolctl==3.1.0
 tomli==2.0.1
-torch==2.2.1
+torch==2.2.0
 torchvision==0.17.1
 typing_extensions==4.8.0
 tzdata==2023.3
