--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ jsonschema==4.17.3
 kiwisolver==1.4.4
 matplotlib==3.7.5
 msgpack==1.0.5
-numpy==1.22.0
+numpy
 packaging==23.1
 pandas==2.0.3
 Pillow==9.5.0
@@ -33,7 +33,7 @@ pytz==2023.3
 PyYAML==6.0.2
 requests==2.31.0
 scikit-learn==1.3.2
-scipy==1.10.1
+scipy
 six==1.16.0
 threadpoolctl==3.1.0
 tomli==2.0.1
