--- a/.github/workflows/macos-tests-3.8.yml
+++ b/.github/workflows/macos-tests-3.8.yml
@@ -1,4 +1,4 @@
-name: macos build python=3.8
+name: macos tests python=3.8
 
 # workflow dispatch has been added for testing purposes
 on: [push, pull_request, workflow_dispatch]
@@ -12,18 +12,28 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.8"
+      - name: Set-up miniconda for macos and ubuntu
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          python-version: 3.8
+          miniconda-version: "latest"
+      - name: Create conda env
+        run: conda create -n spare python=3.8
+      - name: Install pip
+        run: conda run -n spare conda install pip
       - name: Install spare scores
         run: |
-          python -m pip cache purge
-          pip install -r requirements.txt
           pip install setuptools twine wheel
           python setup.py bdist_wheel
           cd dist
           WHEEL_FILE=$(ls spare_scores*)
           pip install "$WHEEL_FILE"
+      - name: Download dependencies
+        run: pip install setuptools && pip install .
       - name: Generate Coverage Report
         run: |
-          pip install pytest pytest-cov
+          pip install pytest-cov
           cd tests/unit && pytest --cov=../../ --cov-report=xml
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v4.0.1
