--- a/requirements.txt
+++ b/requirements.txt
@@ -9,19 +9,20 @@ exceptiongroup==1.1.1
 filelock==3.12.2
 fonttools==4.40.0
 frozenlist==1.4.1
-grpcio==1.65.4
+grpcio==1.67.1
 idna==3.4
 importlib-resources==5.12.0
 iniconfig==2.0.0
 joblib==1.3.1
 jsonschema==4.17.3
 kiwisolver==1.4.4
-matplotlib==3.7.5
+matplotlib
 msgpack==1.0.5
 numpy
+optuna
 packaging==23.1
-pandas==2.0.3
-Pillow==9.5.0
+pandas
+Pillow==11.0.0
 pkgutil_resolve_name==1.3.10
 pluggy==1.5.0
 protobuf==4.23.3
@@ -32,14 +33,14 @@ python-dateutil==2.8.2
 pytz==2023.3
 PyYAML==6.0.2
 requests==2.31.0
-scikit-learn==1.3.2
+scikit-learn==1.5.2
 scipy
 six==1.16.0
 threadpoolctl==3.1.0
 tomli==2.0.1
-torch==2.2.1
-torchvision==0.17.1
-typing_extensions==4.8.0
+torch --index-url https://download.pytorch.org/whl/nightly/cpu
+torchvision --index-url https://download.pytorch.org/whl/nightly/cpu
+typing_extensions
 tzdata==2023.3
 urllib3==2.0.3
 zipp==3.15.0
