--- a/requirements.txt
+++ b/requirements.txt
@@ -38,8 +38,8 @@ scipy
 six==1.16.0
 threadpoolctl==3.1.0
 tomli==2.0.1
-torch --index-url https://download.pytorch.org/whl/nightly/cpu
-torchvision --index-url https://download.pytorch.org/whl/nightly/cpu
+torch==2.2.1
+torchvision==0.17.1
 typing_extensions
 tzdata==2023.3
 urllib3==2.0.3
